Fix flex-align to left for now

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -73,7 +73,7 @@ h3 {
   padding: 1rem;
   width: 15%;
   background-color: var(--sidebar);
-  height: 151rem;
+  height: 248vh;
 }
 
 .sidebar-text {
@@ -85,7 +85,7 @@ h3 {
 .widget-section {
   display: flex;
   flex-direction: column;
-  height: 100rem;
+  /* height: 100vh; */
   width: 85%;
   padding: 0 0 0 2rem;
 }
@@ -93,7 +93,7 @@ h3 {
 .widget-category {
   display: flex;
   flex-direction: row;
-  /* justify-content: space-around; */
+  justify-content: left;
 }
 
 .widget-half,
